--- a/mod-0-lec-github-ej-01/index.html
+++ b/mod-0-lec-github-ej-01/index.html
@@ -5,6 +5,7 @@
     <title>Mi página</title>
   </head>
   <body>
+    <header>Esto es la cabecera</header>
     <h1>Hola Mundo, este es mi primer ejercicio</h1>
   </body>
 </html>
